Split backend/frontend, added AuthController, and implemented registration modal